[gd_scene load_steps=32 format=3 uid="uid://8kikbu3t486a"]

[ext_resource type="Script" uid="uid://b5y87nsqi2e72" path="res://scripts/player.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://cfhtfueheganv" path="res://assets/sprites/knight.png" id="2"]
[ext_resource type="AudioStream" uid="uid://ddj3srjthfqr4" path="res://assets/sounds/jump.wav" id="3"]
[ext_resource type="AudioStream" uid="uid://dgnf4o8404qle" path="res://assets/sounds/hurt.wav" id="4"]

[sub_resource type="AtlasTexture" id="1"]
atlas = ExtResource("2")
region = Rect2(0, 192, 32, 32)

[sub_resource type="AtlasTexture" id="2"]
atlas = ExtResource("2")
region = Rect2(32, 192, 32, 32)

[sub_resource type="AtlasTexture" id="3"]
atlas = ExtResource("2")
region = Rect2(64, 192, 32, 32)

[sub_resource type="AtlasTexture" id="4"]
atlas = ExtResource("2")
region = Rect2(96, 192, 32, 32)

[sub_resource type="AtlasTexture" id="5"]
atlas = ExtResource("2")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="6"]
atlas = ExtResource("2")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="7"]
atlas = ExtResource("2")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="8"]
atlas = ExtResource("2")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="9"]
atlas = ExtResource("2")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="10"]
atlas = ExtResource("2")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="11"]
atlas = ExtResource("2")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="12"]
atlas = ExtResource("2")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="13"]
atlas = ExtResource("2")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="14"]
atlas = ExtResource("2")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="15"]
atlas = ExtResource("2")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="16"]
atlas = ExtResource("2")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="17"]
atlas = ExtResource("2")
region = Rect2(224, 64, 32, 32)

[sub_resource type="AtlasTexture" id="18"]
atlas = ExtResource("2")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="19"]
atlas = ExtResource("2")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="20"]
atlas = ExtResource("2")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="21"]
atlas = ExtResource("2")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="22"]
atlas = ExtResource("2")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="23"]
atlas = ExtResource("2")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="24"]
atlas = ExtResource("2")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="25"]
atlas = ExtResource("2")
region = Rect2(224, 96, 32, 32)

[sub_resource type="SpriteFrames" id="26"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("1")
}, {
"duration": 1.0,
"texture": SubResource("2")
}, {
"duration": 1.0,
"texture": SubResource("3")
}, {
"duration": 1.0,
"texture": SubResource("4")
}],
"loop": true,
"name": &"hurt",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("5")
}, {
"duration": 1.0,
"texture": SubResource("6")
}, {
"duration": 1.0,
"texture": SubResource("7")
}, {
"duration": 1.0,
"texture": SubResource("8")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("9")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("10")
}, {
"duration": 1.0,
"texture": SubResource("11")
}, {
"duration": 1.0,
"texture": SubResource("12")
}, {
"duration": 1.0,
"texture": SubResource("13")
}, {
"duration": 1.0,
"texture": SubResource("14")
}, {
"duration": 1.0,
"texture": SubResource("15")
}, {
"duration": 1.0,
"texture": SubResource("16")
}, {
"duration": 1.0,
"texture": SubResource("17")
}, {
"duration": 1.0,
"texture": SubResource("18")
}, {
"duration": 1.0,
"texture": SubResource("19")
}, {
"duration": 1.0,
"texture": SubResource("20")
}, {
"duration": 1.0,
"texture": SubResource("21")
}, {
"duration": 1.0,
"texture": SubResource("22")
}, {
"duration": 1.0,
"texture": SubResource("23")
}, {
"duration": 1.0,
"texture": SubResource("24")
}, {
"duration": 1.0,
"texture": SubResource("25")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="27"]
radius = 5.0

[node name="Player" type="CharacterBody2D"]
z_index = 5
collision_layer = 2
script = ExtResource("1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("26")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("27")

[node name="JumpAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3")
volume_db = -10.0
bus = &"SFX"

[node name="HurtAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4")
bus = &"SFX"

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="BufferJumpTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
